fix legend on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -89,8 +89,8 @@ input[type="button"]#submit-button:hover {
 
 /* smartphone - up to 25rem */
 @media (max-width: 25rem) {
-  .form-grid {
-    grid-template-columns: 1fr;
+  legend {
+    font-size: 1.2rem;
   }
 }
 
